--- a/Project1/appsettings.json
+++ b/Project1/appsettings.json
@@ -8,7 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppointmentListConnection": "Data Source = AppointmentList.sqlite",
-    "AvailableTimesConnections": "Data Source = AvailableTimesList.sqlite"
+    "AppointmentListConnection": "Data Source = AppointmentList.sqlite"
   }
   }
